[workspace]

members = [
    "src/a_bad_stack",
    "src/an_ok_stack",
    "src/a_persistent_stack",
    "src/a_bad_safe_deque",
    "src/an_unsafe_queue",
    "src/silly1",
    "src/an_ok_unsafe_deque",
    "src/an_ok_nonnull_deque",
    "src/an_ok_binary_tree",
    "src/an_ok_bstree",
    "src/an_ok_avl_tree",
    "src/an_unsafe_rb_tree",
    "src/an_ok_btree",
]